--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-/* ./src/index.css */
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
-.text-2xs {
-    font-size: 0.5rem;
-    line-height: 0.75rem;
-}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -41,6 +32,7 @@ body {
       color:white !important;
       border-radius:25px !important;
       background-color:#AA8371 !important;
+      opacity: 0.7 !important;
       
   }
   #floating_nav >a > span {
@@ -66,7 +58,7 @@ body {
       border-radius:26px 26px 26px 26px !important;
   }
   
-  #floating_nav > #reservation{
+  #floating_nav > #calendar{
       top:25px !important;
   }
   #floating_nav > #contact{
