--- a/src/index.scss
+++ b/src/index.scss
@@ -11,23 +11,29 @@ body {
   }
   #floating_nav
   {
-      position:fixed !important;
-      right:0 !important;
-      align-items:center !important;
-      z-index:100 !important;
+      right:10px !important;
+      z-index:1;
+      position: fixed;
+      top: 30%;
+  }
+  #floating_nav .menu{
+    list-style: disc;
+    padding: 0;
+    margin: 0;
+  }
+  #floating_nav > .menu > .menu_item{
+    line-height: 50px;
+    list-style: none;
+    text-align: right;
   }
   
-  #floating_nav  >a
+  #floating_nav  .menu > .menu_item> p> a
   {
-      position:absolute !important;
-      right:10px !important;
       transition:0.5s !important;
       padding:15px !important;
       width:50px !important;
       height:50px !important;
-      line-height:14px !important;
       text-decoration:none !important;
-      font-size:0.6em !important;
       text-align:right !important;
       color:white !important;
       border-radius:50px !important;
@@ -35,38 +41,25 @@ body {
       opacity: 0.7 !important;
       
   }
-  #floating_nav >a > span {
+  #floating_nav .menu_item> p> a > span {
       visibility:hidden !important;
       position:absolute !important;
       opacity:0 !important;
       transition:opacity 0.5s linear !important;
       }
   
-  #floating_nav >a > img {
+  #floating_nav  .menu_item> p> a > img {
       width:20px;
   }
       
-  #floating_nav >a:hover>span{
+  #floating_nav .menu_item > p > a:hover>span{
       visibility:visible !important;
       position:absolute !important;
       display:flex !important;
       color:black !important;
       opacity:0.7 !important;
   }
-  #floating_nav a:hover {
-      width:200px !important;
+  #floating_nav .menu_item:hover {
+      width:160px !important;
       border-radius:26px 26px 26px 26px !important;
-  }
-  
-  #floating_nav > #calendar{
-      top:25px !important;
-  }
-  #floating_nav > #contact{
-      top:80px !important;
-  }
-  #floating_nav > #phone{
-      top:135px !important;
-  }
-  #floating_nav > #whatsapp{
-      top:190px !important;
   }
